--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "firebase": "^9.6.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.2"
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.28.1",
+    "react-router-dom": "^6.2.2",
+    "vite-tsconfig-paths": "^3.4.1"
   },
   "devDependencies": {
     "@types/firebase": "^3.2.1",
